--- a/app/home.html
+++ b/app/home.html
@@ -21,7 +21,7 @@
 	<div class="tab">
 		<div class="pane_left">
 			<button type="button" class="button_menu" onclick="newProject()"><span class="text_button_menu">New Project</span></button><br>
-			<button type="button" class="button_menu" onclick="registerRemoteHost()"> <span class="text_button_menu">Register Remote host</span></button><br>
+			<button type="button" class="button_menu" onclick="registerRemoteHost()"> <span class="text_button_menu">Register host</span></button><br>
 			<button type="button" class="button_menu" onclick="openFileBrowser()"><span class="text_button_menu">File Browser</span></button><br>
 			<button type="button" class="button_menu" onclick="openKDB()"> <span class="text_button_menu">Knowledge DB</span></button><br>
 			<button type="button" class="button_tool" onclick="launchApp_FXgen()"><span class="text_button_menu">FXgen</span></button>
