fixed some bugs.

--- a/app/filebrowser.html
+++ b/app/filebrowser.html
@@ -24,7 +24,7 @@
 
 	<div class="tab tab_filebrowser">
 	<div class="grp_alignright">
-		<button type="button" class="button_remotehost" onclick="registerRemoteHost()">Register<br>Remote host</button>
+		<button type="button" class="button_remotehost" onclick="registerRemoteHost()">Register host</button>
 	</div>
 		<div class="pane_left">
 			<!--div class="filepath">hirose@localhost:/home/hirose/</div-->
