--- a/app/remotehost.html
+++ b/app/remotehost.html
@@ -19,7 +19,7 @@
 		<div id="version">Ver. 1.0</div>
 	</div>
 
-	<div class="title"><div class="text_title">Register Remote host</div></div>
+	<div class="title"><div class="text_title">Register host</div></div>
 	<div class="tab">
 		<div class="pane_top">
 			<div class="grp_floatleft">
