add host connect test button.

--- a/app/remotehost.html
+++ b/app/remotehost.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="css/remotehost.css">
 		<script type="text/javascript" src="socket.io/socket.io.js"></script>
 		<script type="text/javascript" src="js/filedialog.js"></script>
+		<script type="text/javascript" src="js/RemoteFTP.js"></script>
 		<script type="text/javascript" src="js/remotehost.js"></script>
 	</head>
 	<body onload="boot()">
@@ -61,12 +62,12 @@
 		</div>
 		<div class="grp_floatleft">
 			<div class="hostbrowser" id="regiterlist">
-				<div class="hostitem" draggable="false"><span class="hostlabel">user@host1</span><button type="button" class="dustbox"/></div>
+<!--				<div class="hostitem" draggable="false"><span class="hostlabel">user@host1</span><button type="button" class="dustbox"/></div>
 				<div class="hostitem" draggable="false"><span class="hostlabel">user@host2</span><button type="button" class="dustbox"/></div>
 				<div class="hostitem" draggable="false"><span class="hostlabel">user@host3</span><button type="button" class="dustbox"/></div>
 				<div class="hostitem" draggable="false"><span class="hostlabel">user@host4</span><button type="button" class="dustbox"/></div>
 				<div class="hostitem" draggable="false"><span class="hostlabel">user@host5</span><button type="button" class="dustbox"/></div>
-			</div>
+			</div>-->
 		</div>
 		<div class="buttons_remotehost">
 			<button type="button" class="button_open" onclick="openFileBrowser()">
