update connect test button

--- a/app/remotehost.html
+++ b/app/remotehost.html
@@ -68,6 +68,7 @@
 				<div class="hostitem" draggable="false"><span class="hostlabel">user@host4</span><button type="button" class="dustbox"/></div>
 				<div class="hostitem" draggable="false"><span class="hostlabel">user@host5</span><button type="button" class="dustbox"/></div>
 			</div>-->
+			</div>
 		</div>
 		<div class="buttons_remotehost">
 			<button type="button" class="button_open" onclick="openFileBrowser()">
