--- a/app/remotehost.html
+++ b/app/remotehost.html
@@ -36,7 +36,7 @@
 					<input id="input_path" class="input_info" placeholder="/home/username/" required ></input>
 				</div>
 
-				<div id="idkey">
+				<div id="idkey" class="grp_floatclear">
 					<div class="grp_floatleft">
 						<div class="text_label">ID</div>
 						<input id="input_id" class="input_info"  placeholder="username"></input>
