--- a/app/home.html
+++ b/app/home.html
@@ -44,7 +44,7 @@
 	</div>
 
 	<div class="popup_center">
-		<div class="pane_grp"><input class="filepath_dialog" id="projdir_path" value="localhost:/home/hirose/project1"/></div>
+		<div class="pane_grp"><input class="input_filedialog" id="projdir_path" value="localhost:/home/hirose/project1"/></div>
 		<div class="filebrowser filedialog" id="fbList">
 		<!--	<div class="fileitem" id="dir1" draggable="false" onclick="select_targetDir()"><div class="back"></div><p class="filelabel">..</p></div>
 			<div class="fileitem" id="dir2" draggable="false" onclick="select_targetDir()"><div class="dir"></div><p class="filelabel">dir1</p></div>-->
