fixed remotehost dialog

--- a/app/remotehost.html
+++ b/app/remotehost.html
@@ -76,7 +76,7 @@
 			</button>
 		</div>
 		<div class="popup_center">
-			<div class="pane_grp"><input class="filepath_dialog" id="projdir_path" value="localhost:/home/hirose/project1"/></div>
+			<div class="pane_grp"><input class="input_filedialog" id="projdir_path" value="localhost:/home/hirose/project1"/></div>
 			<div class="filebrowser filedialog" id="fbList"></div>
 			<div class="buttons_dialog">
 				<button type="button" class="button_open" onclick="open_selectedFile()">
