update for windows

--- a/app/editor.html
+++ b/app/editor.html
@@ -21,7 +21,7 @@
 	</div>
 
 	<nav class="navbar navbar-default" id="editorbar">
-    	<div class="filepath" id="filename">/home/user1/projects/work1/project1.pwf</a>
+    	<div class="filepath" id="filename">-</a>
 		<label class="checkbox" for="checkbox1">
 	</nav>
 
