implemented App button

--- a/app/editor.html
+++ b/app/editor.html
@@ -51,6 +51,9 @@
 	<div id="imageArea">
 		<img id="imageView"/>
 	</div>
+	<div id="launchButtonArea">
+		<span id="launchButtonView"/>
+	</div>
 	<div id="shownewfilearea">
 		<button id="button_newfile" onclick="showNewFileArea();">New File</button>
 	</div>
