--- a/app/home.html
+++ b/app/home.html
@@ -19,14 +19,11 @@
 		<div id="version">Ver. 1.0</div>
 	</div>
 	<div class="tab">
-		<div class="pane_left">
+		<div class="pane_left" id="button_menus">
 			<button type="button" class="button_menu" onclick="newProject()"><span class="text_button_menu">New Project</span></button><br>
 			<button type="button" class="button_menu" onclick="registerRemoteHost()"> <span class="text_button_menu">Register host</span></button><br>
 			<button type="button" class="button_menu" onclick="openFileBrowser()"><span class="text_button_menu">File Browser</span></button><br>
 			<button type="button" class="button_menu" onclick="openKDB()"> <span class="text_button_menu">Knowledge DB</span></button><br>
-			<button type="button" class="button_tool" onclick="launchApp_FXgen()"><span class="text_button_menu">FXgen</span></button>
-			<button type="button" class="button_tool" onclick="launchApp_PDI()"><span class="text_button_menu">PDI</span></button>
-			<button type="button" class="button_tool" onclick="launchApp_KVTools()"><span class="text_button_menu">KVTools</span></button>
 		</div>
 		<div class="pane_right">
 			<div class="text_recent">Recent Project</div>
