--- a/app/home.html
+++ b/app/home.html
@@ -15,8 +15,8 @@
 	</head>
 	<body onload="bootstrap()">
 	<div class="header">
-		<div id="logo">HPC/PF</div>
-		<div id="version">Ver. 1.0</div>
+		<div id="logo"></div>
+		<div id="version">Ver.1.1</div>
 	</div>
 	<div class="tab">
 		<div class="pane_left" id="button_menus">
