--- a/app/filebrowser.html
+++ b/app/filebrowser.html
@@ -14,8 +14,8 @@
 	</head>
 	<body onload="bootstrap()">
 	<div class="header">
-		<div id="logo">HPC/PF</div>
-		<div id="version">Ver. 1.0</div>
+		<div id="logo"></div>
+		<div id="version">Ver.1.1</div>
 	</div>
 
 	<div class="title"><div class="text_title">File Browser</div>
