--- a/app/projecteditor.html
+++ b/app/projecteditor.html
@@ -13,8 +13,8 @@
 	</head>
 	<body>
 	<div class="header">
-		<div id="logo">HPC/PF</div>
-		<div id="version">Ver. 1.0</div>
+		<div id="logo"></div>
+		<div id="version">Ver.1.1</div>
 	</div>
 
 	<div class="title"><div class="text_title">Project Editor</div></div>
