--- a/app/remotehost.html
+++ b/app/remotehost.html
@@ -16,8 +16,8 @@
 	</head>
 	<body onload="boot()">
 	<div class="header">
-		<div id="logo">HPC/PF</div>
-		<div id="version">Ver. 1.0</div>
+		<div id="logo"></div>
+		<div id="version">Ver.1.1</div>
 	</div>
 
 	<div class="title"><div class="text_title">Register host</div></div>
