add overwrite confirm dialog. fix directory copy on windows.

--- a/app/filebrowser.html
+++ b/app/filebrowser.html
@@ -20,7 +20,19 @@
 
 	<div class="title"><div class="text_title">File Browser</div>
 	</div>
-				
+	
+	<div id="confirm_area">
+	</div>
+	<div id="confirm_dialog">
+		<div id="confirm_message">
+			<p>The name of file or directory already exists.</p>
+			<p>Do you want to overwrite it?</p>
+			<div id="confirm_button">
+				<button id="button_save" type="button">Save</button>
+				<button id="button_cancel" type="button">Cancel</button>
+			</div>
+		</div>
+	</div>
 
 	<div class="tab tab_filebrowser">
 	<div class="grp_alignright">
