add renaming to filebrowser add opening file to info mode

--- a/app/editor.html
+++ b/app/editor.html
@@ -37,7 +37,7 @@
 			</span>
 		</div>
 		<div class="info_area">
-			<div class="info_text_area">
+			<div class="info_text_area" id="info_text_area">
 				<div class="info_title">
 					Description:
 					<div class="info_text" id="info_description">
@@ -103,7 +103,7 @@
 		</div>
 		<div class="exe_area">
 			<div class="exe_log_area">
-				<div class="exe_log">
+				<div class="exe_log" id="exe_log">
 					Log Area
 				</div>
 			</div>
