--- a/app/filebrowser.html
+++ b/app/filebrowser.html
@@ -56,6 +56,11 @@
 					<div class="fileitem" id="dir2" draggable="true" ><div class="dir" ></div><p class="filelabel">dir1</p><button type="button" class="dustbox"></button></div>
 					<div class="fileitem" id="file1" draggable="true"><div class="file"></div><p class="filelabel">file1</p><button type="button" class="dustbox"></button></div>-->
 				</div>
+				
+				<span id="rename_box_container" style="display:none;">
+					<input type"text" id="rename_box">
+				</span>
+				
 				<div class="actionmenu" id="actionmenu_left">
 					<div class="actionitem" id="copy_left"><p class="text_action">-> copy</p></div>
 					<div class="actionitem" id="move_left"><p class="text_action">-> move</p></div>
@@ -116,5 +121,8 @@
 		</div>
 
 	</div>
+		
+	<div class="popup_background" id="popup_background"></div>
+		
 	</body>
 </html>
