add back button

--- a/app/editor.html
+++ b/app/editor.html
@@ -37,6 +37,11 @@
 			</span>
 		</div>
 		<div class="info_area">
+			<div class="info_back_button_area" id="info_back_button_area">
+				<button class="button_back" onclick="backToInfo();">Back</button>
+			</div>
+			<div class="info_text_area" id="info_opened_text_area">
+			</div>
 			<div class="info_text_area" id="info_text_area">
 				<div class="info_title">
 					Description:
