--- a/app/home.html
+++ b/app/home.html
@@ -22,23 +22,26 @@
 
 	<div id="new_project">
 		<div class="new_project_content">
-			New Project!<br><!--stdout:<br>-->
+			<div>New Project!</div>
 			<input type="text" id="newprojectname" class="input-newproject" placeholder="project name"/>
 			<button id="button_new" onclick="newProject(newprojectname.value)"></button>
 		</div>
 	</div>
 	<div class="tab">
 		<div class="pane_left" id="button_menus">
-			<button type="button" class="button_menu" onclick="registerRemoteHost()"> <span class="text_button_menu">Register host</span></button><br>
-			<button type="button" class="button_menu" onclick="openFileBrowser()"><span class="text_button_menu">File Browser</span></button><br>
-			<button type="button" class="button_menu" onclick="openKDB()"> <span class="text_button_menu">Knowledge DB</span></button><br>
+			<button type="button" class="button_menu" onclick="showNewProjectDialog()"><span class="text_button_menu">New Project</span></button><br>
+			<button type="button" class="button_menu" onclick="showProjectDialog()"><span class="text_button_menu">Open Project</span></button><br>
 		</div>
 		<div class="pane_right">
-			<button type="button" class="button_menu" onclick="showNewProjectDialog()"><span class="text_button_menu">New Project</span></button><br>
 			<button type="button" class="button_menu" onclick="showProjectArchiveDialog()"><span class="text_button_menu">Open Project Archive</span></button><br>
-			<button type="button" class="button_menu" onclick="showProjectDialog()"><span class="text_button_menu">Open Project</span></button><br>
 			<button type="button" class="button_menu" onclick="showRecentProjectDialog()"><span class="text_button_menu">Open Recent Project</span></button><br>
 		</div>
+	</div>
+		
+	<div class="pane_bottom">
+		<button type="button" class="button_menu_bottom" onclick="registerRemoteHost()"> <span class="text_button_menu_bottom">Register host</span></button>
+		<button type="button" class="button_menu_bottom" onclick="openFileBrowser()"><span class="text_button_menu_bottom">File Browser</span></button>
+		<button type="button" class="button_menu_bottom" onclick="openKDB()"> <span class="text_button_menu_bottom">Knowledge DB</span></button>
 	</div>
 
 	<div class="popup_center" id="recent_project">
