change rename warning dialog

--- a/app/filebrowser.html
+++ b/app/filebrowser.html
@@ -33,6 +33,14 @@
 			</div>
 		</div>
 	</div>
+	<div id="exist_warning_dialog">
+		<div id="confirm_message">
+			<p>The name of file or directory already exists.</p>
+			<div id="confirm_button">
+				<button id="button_ok" type="button">OK</button>
+			</div>
+		</div>
+	</div>
 
 	<div class="tab tab_filebrowser">
 	<div class="grp_alignright">
