reduce global variable

--- a/app/home.html
+++ b/app/home.html
@@ -32,7 +32,7 @@
 			<button type="button" class="button_menu" onclick="showNewProjectDialog()"><span class="text_button_menu">New Project</span></button><br>
 			<button type="button" class="button_menu" onclick="showProjectDialog()"><span class="text_button_menu">Open Project</span></button><br>
 		</div>
-		<div class="pane_right">
+		<div class="pane_right"  id="button_menus">
 			<button type="button" class="button_menu" onclick="showProjectArchiveDialog()"><span class="text_button_menu">Open Project Archive</span></button><br>
 			<button type="button" class="button_menu" onclick="showRecentProjectDialog()"><span class="text_button_menu">Open Recent Project</span></button><br>
 		</div>
